fixed overflow issues

--- a/src/features/editor/Editor.module.css
+++ b/src/features/editor/Editor.module.css
@@ -7,6 +7,7 @@
 
 textarea.editor {
     position: absolute;
+    overflow: auto;
     left: 0;
     bottom: 0;
     resize: none;
