--- a/src/features/previewer/Previewer.module.css
+++ b/src/features/previewer/Previewer.module.css
@@ -1,9 +1,19 @@
 .previewerContainer {
+    position: relative;
     border: 3px solid salmon;
     width: 600px;
     height: 600px;
 }
 
 .previewer {
+    position: absolute;
     text-align: left;
+    /* overflow-x: hidden; */
+    /* overflow-y: scroll; */
+    overflow: auto;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 94%;
+    border: 3px solid yellowgreen;
 }
